add section of styles and move teachers to about

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
                 </div>
             </a>
             <ul class="nav-links" role="list">
-                <li role="listitem"><a href="#teachers">Преподаватели</a></li>
+                <li role="listitem"><a href="#styles">Стили</a></li>
+                <!-- <li role="listitem"><a href="#teachers">Преподаватели</a></li> -->
                 <li role="listitem"><a href="#pricing">Стоимость</a></li>
                 <li role="listitem"><a href="#calendar">Расписание</a></li>
                 <li role="listitem"><a href="#about">О Нас</a></li>
@@ -74,37 +75,51 @@
         </section>
 
 
-        <section id="teachers" class="container-full" role="group" aria-labelledby="teachers-heading">
-            <h2>Преподаватели</h2>
+        <section id="styles" class="container-full">
+            <h2>Наши стили</h2>
             <div class="spacer"></div>
-            <div class="teachers-container">
-                <article class="teacher">
-                    <div class="image-placeholder" aria-label="Инструктор по танцам Грейсьер" role="img">
-                        <img src="img/male-teacher.webp" alt="Инструктор по танцам Грейсьер" loading="lazy">
+            <div class="styles-container">
+                <div class="styles-cards">
+                    <div class="style-card">
+                        <div class="image-placeholder" aria-label="Иконка Сальса" role="img">
+                            <img src="img/salsa.jpg" alt="Иконка Сальса" loading="lazy">
+                        </div>
+                        <h3>Сальса Куба</h3>
+                        <p>Стиль сальсы родом с Кубы, также известный как касино. Отличается круговыми движениями,
+                            сложными
+                            комбинациями рук и акцентом на музыкальность.</p>
                     </div>
-                    <div class="teacher-info-1">
-                        <h3>Грейсьер Мачадо Лопес</h3>
-                        <p>Основатель школы</p>
-                        <p>Образование: Национальная школа танца в Гаване по специальности: «Танцор современного танца
-                            и
-                            фольклора». Участвовал в международных фестивалях в Италии, Франции, Венесуэле, Колумбии. 8
-                            лет
-                            преподавал в Китае.</p>
+                    <div class="style-card">
+                        <div class="image-placeholder" aria-label="Иконка Бачата" role="img">
+                            <img src="img/bachata.jpg" alt="Иконка Бачата" loading="lazy">
+                        </div>
+                        <h3>Бачата</h3>
+                        <p>Стиль бачаты, популярный в Европе. Характеризуется близким положением партнеров,
+                            волнообразными
+                            движениями и акцентом на ведении.</p>
                     </div>
-                </article>
-                <article class="teacher">
-                    <div class="image-placeholder" aria-label="Инструктор по танцам Аньель" role="img">
-                        <img src="img/female-teacher.webp" alt="Инструктор по танцам Аньель" loading="lazy">
+                    <div class="style-card">
+                        <div class="image-placeholder" aria-label="Иконка Латино Микс" role="img">
+                            <img src="img/latino-mix.jpg" alt="Иконка Латино Микс" loading="lazy">
+                        </div>
+                        <h3>Латино Микс</h3>
+                        <p>Занятия, включающие элементы различных латиноамериканских танцев, таких как сальса, бачата,
+                            меренге и другие. Подходит для знакомства с разными стилями.</p>
                     </div>
-                    <div class="teacher-info-2">
-                        <h3>Аньель Эррера Кастильо</h3>
-                        <p>Образование: Национальная школа исскусств в Гаване по специальности: "Танцор современного и
-                            народного танца".</p>
+                    <div class="style-card">
+                        <div class="image-placeholder" aria-label="Иконка Реггетон" role="img">
+                            <img src="img/reggeaton.jpg" alt="Иконка Реггетон" loading="lazy">
+                        </div>
+                        <h3>Реггетон</h3>
+                        <p>Современный танец, сочетающий элементы хип-хопа, регги и латиноамериканских ритмов.
+                            Характеризуется энергичными движениями бедер и корпуса.</p>
                     </div>
-                </article>
+                </div>
             </div>
             <div class="spacer"></div>
         </section>
+
+
 
         <section id="pricing" class="container-full" role="group" aria-labelledby="pricing-heading">
             <h2>Стоимость</h2>
@@ -359,8 +374,45 @@
             <div class="spacer"></div>
         </section>
 
+
         <section id="about" class="container-full" role="group" aria-labelledby="about-heading">
             <h2>О нас</h2>
+            <p>Преподаватели</p>
+            <div class="spacer"></div>
+            <div class="teachers-container">
+                <article class="teacher">
+                    <div class="image-placeholder" aria-label="Инструктор по танцам Грейсьер" role="img">
+                        <img src="img/male-teacher.webp" alt="Инструктор по танцам Грейсьер" loading="lazy">
+                    </div>
+                    <div class="teacher-info-1">
+                        <h3>Грейсьер Мачадо Лопес</h3>
+                        <p>Основатель школы</p>
+                        <p>Образование: Национальная школа танца в Гаване по специальности: «Танцор современного
+                            танца
+                            и
+                            фольклора». Участвовал в международных фестивалях в Италии, Франции, Венесуэле,
+                            Колумбии. 8
+                            лет
+                            преподавал в Китае.</p>
+                    </div>
+                </article>
+                <article class="teacher">
+                    <div class="image-placeholder" aria-label="Инструктор по танцам Аньель" role="img">
+                        <img src="img/female-teacher.webp" alt="Инструктор по танцам Аньель" loading="lazy">
+                    </div>
+                    <div class="teacher-info-2">
+                        <h3>Аньель Эррера Кастильо</h3>
+                        <p>Образование: Национальная школа исскусств в Гаване по специальности: "Танцор современного
+                            и
+                            народного танца".</p>
+                    </div>
+                </article>
+            </div>
+            <div class="spacer"></div>
+        </section>
+
+
+        <section id="gallery" class="container-full" role="group" aria-labelledby="gallery-heading">
             <div class="gallery-container">
                 <p class="bigger-text">Каждый год мы участвуем в Фестивале латиноамериканской культуры в Минске</p>
                 <!-- <iframe aria-label="Участие в фестивале латиноамериканской культуры в Минске"
