remove logo placeholder

--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
         <div class="navbar-overlay"></div>
         <nav class="navbar" role="navigation">
             <a href="#home">
-                <div class="image-placeholder" aria-label="Logo" role="img">
-                    <img src="img/logo-content.svg" alt="logo" id="logo-header">
-                </div>
+                <img src="img/logo-content.svg" alt="" aria-label="Logo" alt="logo" id="logo-header">
             </a>
             <ul class="nav-links" role="list">
                 <li role="listitem"><a href="#styles">Стили</a></li>
