set fixed sizes to logos and icons

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="navbar-overlay"></div>
         <nav class="navbar" role="navigation">
             <a href="#home">
-                <img src="img/logo-content.svg" alt="" aria-label="Logo" alt="logo" id="logo-header">
+                <img src="img/logo-content.svg" alt="" id="logo-header" ria-label="Logo">
             </a>
             <ul class="nav-links" role="list">
                 <li role="listitem"><a href="#styles">Стили</a></li>
