change styles pictures and add zumba

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <div class="styles-cards">
                     <div class="style-card">
                         <div class="image-placeholder" aria-label="Иконка Сальса" role="img">
-                            <img src="img/salsa.jpg" alt="Иконка Сальса" loading="lazy">
+                            <img src="img/salsa.jpeg" alt="Иконка Сальса" loading="lazy">
                         </div>
                         <h3>Сальса Куба</h3>
                         <p>Стиль сальсы родом с Кубы, также известный как касино. Отличается круговыми движениями,
@@ -89,7 +89,7 @@
                     </div>
                     <div class="style-card">
                         <div class="image-placeholder" aria-label="Иконка Бачата" role="img">
-                            <img src="img/bachata.jpg" alt="Иконка Бачата" loading="lazy">
+                            <img src="img/bachata.jpeg" alt="Иконка Бачата" loading="lazy">
                         </div>
                         <h3>Бачата</h3>
                         <p>Стиль бачаты, популярный в Европе. Характеризуется близким положением партнеров,
@@ -98,7 +98,7 @@
                     </div>
                     <div class="style-card">
                         <div class="image-placeholder" aria-label="Иконка Латино Микс" role="img">
-                            <img src="img/latino-mix.jpg" alt="Иконка Латино Микс" loading="lazy">
+                            <img src="img/latino.jpeg" alt="Иконка Латино Микс" loading="lazy">
                         </div>
                         <h3>Латино Микс</h3>
                         <p>Занятия, включающие элементы различных латиноамериканских танцев, таких как сальса, бачата,
@@ -106,11 +106,19 @@
                     </div>
                     <div class="style-card">
                         <div class="image-placeholder" aria-label="Иконка Реггетон" role="img">
-                            <img src="img/reggeaton.jpg" alt="Иконка Реггетон" loading="lazy">
+                            <img src="img/reggaeton.jpeg" alt="Иконка Реггетон" loading="lazy">
                         </div>
                         <h3>Реггетон</h3>
                         <p>Современный танец, сочетающий элементы хип-хопа, регги и латиноамериканских ритмов.
                             Характеризуется энергичными движениями бедер и корпуса.</p>
+                    </div>
+                    <div class="style-card">
+                        <div class="image-placeholder" aria-label="Иконка Зумба" role="img">
+                            <img src="img/zumba.jpeg" alt="Иконка Зумба" loading="lazy">
+                        </div>
+                        <h3>Зумба</h3>
+                        <p>Зумба — танцевальная фитнес-тренировка под зажигательные ритмы. Эффективно, весело и подходит
+                            для всех!</p>
                     </div>
                 </div>
             </div>
