make shorted styles description text

--- a/index.html
+++ b/index.html
@@ -83,42 +83,38 @@
                             <img src="img/salsa.jpeg" alt="Иконка Сальса" loading="lazy">
                         </div>
                         <h3>Сальса Куба</h3>
-                        <p>Стиль сальсы родом с Кубы, также известный как касино. Отличается круговыми движениями,
-                            сложными
-                            комбинациями рук и акцентом на музыкальность.</p>
+                        <p>Энергичный кубинский стиль сальсы. Круговые движения, сложный футвёрк и импровизация под
+                            музыку.</p>
                     </div>
                     <div class="style-card">
                         <div class="image-placeholder" aria-label="Иконка Бачата" role="img">
                             <img src="img/bachata.jpeg" alt="Иконка Бачата" loading="lazy">
                         </div>
                         <h3>Бачата</h3>
-                        <p>Стиль бачаты, популярный в Европе. Характеризуется близким положением партнеров,
-                            волнообразными
-                            движениями и акцентом на ведении.</p>
+                        <p>Чувственный танец с близким контактом. Плавные, волнообразные движения тела.</p>
                     </div>
                     <div class="style-card">
                         <div class="image-placeholder" aria-label="Иконка Латино Микс" role="img">
                             <img src="img/latino.jpeg" alt="Иконка Латино Микс" loading="lazy">
                         </div>
                         <h3>Латино Микс</h3>
-                        <p>Занятия, включающие элементы различных латиноамериканских танцев, таких как сальса, бачата,
-                            меренге и другие. Подходит для знакомства с разными стилями.</p>
+                        <p>Микс популярных латиноамериканских стилей. Сочетание энергичных движений и разнообразных
+                            ритмов.</p>
                     </div>
                     <div class="style-card">
                         <div class="image-placeholder" aria-label="Иконка Реггетон" role="img">
                             <img src="img/reggaeton.jpeg" alt="Иконка Реггетон" loading="lazy">
                         </div>
                         <h3>Реггетон</h3>
-                        <p>Современный танец, сочетающий элементы хип-хопа, регги и латиноамериканских ритмов.
-                            Характеризуется энергичными движениями бедер и корпуса.</p>
+                        <p>Современный уличный танец с акцентом на движения бёдрами. Выраженный ритм и яркая,
+                            раскованная манера.</p>
                     </div>
                     <div class="style-card">
                         <div class="image-placeholder" aria-label="Иконка Зумба" role="img">
                             <img src="img/zumba.jpeg" alt="Иконка Зумба" loading="lazy">
                         </div>
                         <h3>Зумба</h3>
-                        <p>Зумба — танцевальная фитнес-тренировка под зажигательные ритмы. Эффективно, весело и подходит
-                            для всех!</p>
+                        <p>Зажигательная смесь танца и фитнеса. Ритмичные движения под музыку разных стран мира.</p>
                     </div>
                 </div>
             </div>
