use center content in home

--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
             <ul class="nav-links" role="list">
                 <li role="listitem"><a href="#about">О Нас</a></li>
                 <li role="listitem"><a href="#styles">Стили</a></li>
-                <!-- <li role="listitem"><a href="#teachers">Преподаватели</a></li> -->
                 <li role="listitem"><a href="#pricing">Стоимость</a></li>
                 <li role="listitem"><a href="#calendar">Расписание</a></li>
                 <li role="listitem"><a href="#contacts">Контакты</a></li>
@@ -59,14 +58,12 @@
 
         <section id="home" class="container-full" role="group" aria-labelledby="home-heading"
             data-bg-desktop="img/home-desktop.webp" data-bg-mobile="img/home-mobile.webp">
-            <div class="spacer"></div>
             <div class="home-container">
                 <h1>LA CASA<br>DE GREI</h1>
-                <p>Кубинская школа латиноамериканских танцев</p>
+                <p>Школа латиноамериканских танцев</p>
                 <p>У танца нет возраста. У танца есть душа и она всегда молода</p>
                 <a href="#styles" id="cta">Посмотреть стили</a>
             </div>
-            <div class="spacer"></div>
             <div class="scroll-down">
                 <img src="img/scroll-down.svg" alt="Scroll down">
                 <p>Прокрутите<br>вниз</p>
