scale active elements on clicks

--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
                                 src="img/telegram.svg" alt="Telegram Icon">Телеграм</a></li>
                     <li role="listitem"><a href="viber://chat?number=%2B375293575258" target="_blank"
                             rel="noopener"><img src="img/viber.svg" alt="Viber Icon">Вайбер</a></li>
-                    <li role="listitem"><a href="tel:+375293575258"><img src="img/call.svg" alt="Phone Icon">Телефон</a>
+                    <li role="listitem"><a href="tel:+375293575258" target="_blank" rel="noopener"><img
+                                src="img/call.svg" alt="Phone Icon">Телефон</a>
                     </li>
                 </ul>
             </div>
@@ -179,13 +180,13 @@
                         <p>Современный уличный танец с акцентом на движения бёдрами. Выраженный ритм и яркая,
                             раскованная манера.</p>
                     </div>
-                    <div class="style-card">
+                    <!-- <div class="style-card">
                         <div class="image-placeholder" aria-label="Иконка Зумба" role="img">
                             <img src="img/zumba.jpeg" alt="Иконка Зумба" loading="lazy">
                         </div>
                         <h3>Зумба</h3>
                         <p>Зажигательная смесь танца и фитнеса. Ритмичные движения под музыку разных стран мира.</p>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div class="spacer"></div>
