fix logo not working when navbar overlay shown

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <header>
         <div class="navbar-overlay"></div>
         <nav class="navbar" role="navigation">
-            <a href="#home">
-                <img src="img/logo-content.svg" alt="" id="logo-header" ria-label="Logo">
+            <a href="#home" id="logo-header">
+                <img src="img/logo-content.svg" alt="" ria-label="Logo">
             </a>
             <ul class="nav-links" role="list">
                 <li role="listitem"><a href="#about">О Нас</a></li>
