use webp images for the styles

--- a/index.html
+++ b/index.html
@@ -151,22 +151,22 @@
                 <div class="styles-cards">
                     <div class="style-card">
                         <div class="image-placeholder" aria-label="Иконка Сальса" role="img">
-                            <img src="img/salsa.jpeg" alt="Иконка Сальса" loading="lazy">
+                            <img src="img/salsa.webp" alt="Иконка Сальса" loading="lazy">
                         </div>
                         <h3>Сальса Куба</h3>
-                        <p>Энергичный кубинский стиль. Круговые движения, сложный футвёрк и импровизация под
-                            музыку.</p>
+                        <p>Энергичный кубинский стиль. Круговые движения, сложная работа ног и импровизация под музыку.
+                        </p>
                     </div>
                     <div class="style-card">
                         <div class="image-placeholder" aria-label="Иконка Бачата" role="img">
-                            <img src="img/bachata.jpeg" alt="Иконка Бачата" loading="lazy">
+                            <img src="img/bachata.webp" alt="Иконка Бачата" loading="lazy">
                         </div>
                         <h3>Бачата</h3>
                         <p>Чувственный танец с близким контактом. Плавные, волнообразные движения тела.</p>
                     </div>
                     <div class="style-card">
                         <div class="image-placeholder" aria-label="Иконка Латино Микс" role="img">
-                            <img src="img/latino.jpeg" alt="Иконка Латино Микс" loading="lazy">
+                            <img src="img/latina.webp" alt="Иконка Латино Микс" loading="lazy">
                         </div>
                         <h3>Латино Микс</h3>
                         <p>Микс популярных латиноамериканских стилей. Сочетание энергичных движений и разнообразных
@@ -174,10 +174,10 @@
                     </div>
                     <div class="style-card">
                         <div class="image-placeholder" aria-label="Иконка Реггетон" role="img">
-                            <img src="img/reggaeton.jpeg" alt="Иконка Реггетон" loading="lazy">
+                            <img src="img/reggaeton.webp" alt="Иконка Реггетон" loading="lazy">
                         </div>
                         <h3>Реггетон</h3>
-                        <p>Современный уличный танец с акцентом на движения бёдрами. Выраженный ритм и яркая,
+                        <p>Современный уличный танец с акцентом на движения бедрами. Выраженный ритм и яркая,
                             раскованная манера.</p>
                     </div>
                     <!-- <div class="style-card">
